# long-term-memory-mcp

./: .gitignore  LICENSE  LongTermMemoryMCP.py  README.md  benchmark_embeddings.py  benchmark_token_usage.py  chroma_query_tool.py  docker-compose.yml  eval_tool.py  install_autostart.py  install_opencode.ps1  install_opencode.sh  long_term_memory_mcp.py  memory_manager_gui.py  pyproject.toml  requirements.txt  server.py  tensorboard_visualizer.py  tray_app.py  vector_visualizer.py
memory_mcp/: __init__.py  ast_extractor.py  audit.py  config.py  identity.py  mcp_tools.py  memory_system.py  models.py  network_sharing.py  webui_api.py
memory_mcp/database_backends/: __init__.py  base.py  postgres.py  sqlite.py
memory_mcp/vector_backends/: __init__.py  base.py  chroma.py  pgvector_backend.py
opencode/: AGENTS.md
opencode/plugin/: long-term-memory.ts
webui/: .env.example  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  index.css  main.tsx
webui/src/api/: client.ts  queryKeys.ts  types.ts
webui/src/components/: CompareModal.tsx  MemoryDetail.tsx  MemoryList.tsx  MigrateModal.tsx  PeerPicker.tsx  SearchPanel.tsx  StatsPanel.tsx  VectorsModal.tsx
webui/src/store/: memoryStore.ts
